# dyna

./: .gitignore  Auxiliary.cpp  Auxiliary.h  CMakeLists.txt  Context.cpp  Context.h  ContextStringParser.cpp  ContextStringParser.h  DBEntity_VariableType.cpp  DBEntity_VariableType.h  DynamicAnalyser.cpp  DynamicAnalyser.h  JsonObjects.h  NOTICE.txt  RegionActualMap.hpp  debug.h  dyna-config.h.in  get_pid.h  llvm_interface.cpp  m_time.h  memory_usage.h  omp_dbg.cpp  omp_dbg.h  string_utils.cpp  string_utils.h  type_aliases.hpp
Result/: AnalysisResult.hpp  AnalysisStorage.cpp  AnalysisStorage.hpp  DependencyAnalysisResult.cpp  DependencyAnalysisResult.hpp
dyna-joiner/: CMakeLists.txt  dyna-joiner-main.cpp
test/: AddrInfoTest.cpp  CMakeLists.txt  ContextStringParserTest.cpp  ContextTest.cpp  string_utils_test.cpp
